added JRAD items to store

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/ico" href="favicon.ico" />
         <link rel="stylesheet" id="pagestyle" href="css/applight.css" />
-        <script type="importmap">
+        <!--  <script type="importmap">
             {
                 "imports": {
                     "ptui": "http://localhost:8125/ptui/ptui.1.0.0.mjs",
@@ -12,7 +12,7 @@
                     "ptmath": "http://localhost:8125/ptmath/ptmath.1.0.0.mjs"
                 }
             }
-        </script>
+        </script>-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Air Traffic Visualizer</title>
     </head>
